tests/baselines/reference/enumsWithMultipleDeclarations1.errors.txt
enumsWithMultipleDeclarations1.ts(1,6): error TS2567: Enum declarations can only merge with namespace declarations.
enumsWithMultipleDeclarations1.ts(5,6): error TS2567: Enum declarations can only merge with namespace declarations.
enumsWithMultipleDeclarations1.ts(9,6): error TS2567: Enum declarations can only merge with namespace declarations.


==== enumsWithMultipleDeclarations1.ts (3 errors) ====
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      A
    }
    
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      B
    }
    
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      C
    }